[project]
name = "mizu-common-py"
version = "1.0.0"
description = "Python用共通ライブラリ"
authors = [
    {name = "みず", email = "mizu.copo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-auth>=2.23.0",
    "requests>=2.31.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "google-api-python-client-stubs>=1.32.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "python-decouple-stubs>=0.1",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
    "types-requests>=2.32.4.20250913",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "W", "F",   # 基本
    "I",             # import
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehension
    "ARG",           # unused args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]
mypy_path = "src:stubs"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["google.*", "googleapiclient.*"]
ignore_missing_imports = true

[tool.taskipy.tasks]
test = "ruff check --fix src tests stubs && ruff format src tests stubs && mypy && pytest"

[tool.uv]
package = true
