[project]
name = "mizu-common-py"
version = "2.5.0"
description = "Python用共通ライブラリ"
authors = [
    {name = "みず", email = "mizu.copo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-api-python-client>=2.100.0",
    "google-api-python-client-stubs>=1.32.0",
    "google-auth>=2.23.0",
    "portalocker>=3.0.0",
    "python-decouple>=3.8",
    "python-decouple-stubs>=0.1",
    "requests>=2.31.0",
    "types-requests>=2.32.4.20250913",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.10",
    "taskipy>=1.14.1",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", "W", "F",   # 基本
    "I",             # import
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehension
    "ARG",           # unused args
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests", "examples"]
mypy_path = "src"
explicit_package_bases = true

[tool.taskipy.tasks]
test = "ruff check --fix src tests examples && ruff format src tests examples && mypy && pytest"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mizu_common"]

[tool.uv]
package = true
